fix z-indexes

--- a/components/Contact/Contact.module.sass
+++ b/components/Contact/Contact.module.sass
@@ -36,7 +36,7 @@
         opacity: 0
 
 .button
-    z-index: 35
+    z-index: 500
     position: fixed
     top: 20px
     right: 20px
