--- a/components/Layout/Layout.module.sass
+++ b/components/Layout/Layout.module.sass
@@ -25,7 +25,7 @@
     padding: 20px
     color: #fff
     font-weight: 600
-    z-index: 20
+    z-index: 50
     +laptop
         justify-content: flex-end
         margin-top: 70px
